Jdk11 syntax optimization